Fix issues with Handsontable's stack overflow, add icons to context menus

--- a/style/contextMenu.less
+++ b/style/contextMenu.less
@@ -7,6 +7,13 @@
     display:inline-block;
     vertical-align: top;
 
+    a .icon {
+      width: @smallButtonImageSize;
+      height: @smallButtonImageSize;
+      filter: @textColorImageFilter;
+      padding-right: @smallButtonImageSize / 2;
+    }
+
     a.active {
       background-color: @selectionColor;
       color: @invertedTextColor;
